# vertigo

./: LICENSE.txt  LICENSE.txt.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
devtools/: install.bat  reinstall.bat  uninstall.bat
src/vertigo/: __init__.py  api.py  cli.py  cloud_client.py
src/vertigo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/vertigo/core/: __init__.py
src/vertigo/core/auth/: __init__.py  authenticator.py  context.py  context_builder.py  form_classifier.py  form_detector.py  orchestrator.py  success_detector.py
src/vertigo/core/fingerprint/: __init__.py  classifier.py  crawler.py  hasher.py  manifest.py  parser.py
src/vertigo/core/scan/: __init__.py  anomaly_detector.py  crawler.py  form_extractor.py  js_analyzer.py  link_extractor.py  navigator.py  page_classifier.py  page_loader.py  report.py  resource_graph.py  throttler.py
